--- a/src/containers/DropDownMenu/DropDownMenu.module.css
+++ b/src/containers/DropDownMenu/DropDownMenu.module.css
@@ -1,5 +1,7 @@
 .dropDownMenu {
     background-color: white;
     padding: 2rem;
-    
+    border-radius: 2rem;
+    box-shadow: 0px 13px 17px 0px rgb(12, 46, 97);
 }
+
