--- a/src/components/DropDown/Dropdown.module.css
+++ b/src/components/DropDown/Dropdown.module.css
@@ -3,6 +3,7 @@
     border-bottom: 1px solid black;
     animation: fadeIn ease-in-out .5s;
     animation-fill-mode: forwards;
+    position: relative;
 }
 
 .dropdown__menu__info {
@@ -15,6 +16,6 @@
 }
 
 @keyframes fadeIn {
-    from {opacity: 0}
-    to {opacity: 1}
+    from {opacity: 0; top: 4px;}
+    to {opacity: 1; top: 0px;}
   }
