--- a/src/components/DropDown/Dropdown.module.css
+++ b/src/components/DropDown/Dropdown.module.css
@@ -15,6 +15,10 @@
     line-height: 1.5rem;
 }
 
+.dropdown__menu__title {
+    color: black;
+}
+
 @keyframes fadeIn {
     from {opacity: 0; top: 4px;}
     to {opacity: 1; top: 0px;}
