--- a/src/pages/landing/Header.module.css
+++ b/src/pages/landing/Header.module.css
@@ -1,8 +1,16 @@
 .navMenu {
     position: absolute;
-    top: 5%;
-    left: 40%;
-    width: 25rem;
+
+    width: 30rem;
+}
+
+.websiteHeader {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 .menu__items {
@@ -10,6 +18,8 @@
     justify-content: center;
     padding: 0;
     text-decoration: none;
+    margin: 0;
+    margin-bottom: 1rem;
 }
 
 .menu__item {
