detailpage almost done

--- a/src/sections/SectionInfo/SectionInfo.module.css
+++ b/src/sections/SectionInfo/SectionInfo.module.css
@@ -1,14 +1,20 @@
 .detailPageSectionInfo__wrapper {
     display: flex;
+    margin-bottom: 15rem;
+    margin-top: 15rem;
 }
 
 .directionLeft {
     display: flex;
     flex-direction: row-reverse;
+    margin-bottom: 15rem;
+    margin-top: 15rem;
+   
 }
 
 .detailPageSectionInfo__paragraphs {
     display: flex;
+
     flex-direction: column;
     justify-content: center;
 
